# polish-cinema-scraper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: daily-cinema-scrape.yml
config/: cinemas.yaml
data/daily/: INCOMPLETE_DAYS.json  cinema_2026-01-10.csv  cinema_2026-01-10.json  cinema_2026-01-11.csv  cinema_2026-01-12.csv  cinema_2026-01-13.csv  cinema_2026-01-14.csv  cinema_2026-01-15.csv  cinema_2026-01-16.csv  cinema_2026-01-17.csv  cinema_2026-01-18.csv  cinema_2026-01-19.csv  cinema_2026-01-20.csv  cinema_2026-01-21.csv  cinema_2026-01-22.csv  cinema_2026-01-23.csv  cinema_2026-01-24.csv  cinema_2026-01-25.csv  cinema_2026-01-26.csv  cinema_2026-01-27.csv  cinema_2026-01-28.csv  cinema_2026-01-29.csv  cinema_2026-01-30.csv  cinema_2026-02-02.csv  cinema_2026-02-03.csv  cinema_2026-02-04.csv  cinema_2026-02-05.csv  cinema_2026-02-07.csv  cinema_2026-02-08.csv  cinema_2026-02-09.csv  cinema_2026-02-10.csv  cinema_2026-02-11.csv  cinema_2026-02-12.csv  cinema_2026-02-13.csv  cinema_2026-02-14.csv  cinema_2026-02-15.csv  cinema_2026-02-16.csv  cinema_2026-02-17.csv  cinema_2026-02-18.csv  cinema_2026-02-19.csv  (+990 more)
docs/: STRATEGY_GUIDE.md
src/: __init__.py  cinema_city_scraper.py  helios_scraper.py  kino_scraper_v2.py  merge_and_update.py  models.py  sheets_updater.py
src/scrapers/: __init__.py  base.py
tests/: __init__.py
